some refactoring and cleanup

--- a/Common/Domain/Domain.fsproj
+++ b/Common/Domain/Domain.fsproj
@@ -72,6 +72,7 @@
     <Compile Include="RunDomain.fs" />
     <Compile Include="IDataStore.fs" />
     <Compile Include="Code\PathBuilder.fs" />
+    <Compile Include="Code\CollectionExtensions.fs" />
     <Compile Include="Code\DomainExtensions.fs" />
   </ItemGroup>
   <ItemGroup>
