move to new margin completed. bunch of things broken though. TBF next.

--- a/Hosts/VS/TddStudioPackage.Extensions.UnitTests/TddStudioPackage.Extensions.UnitTests.fsproj
+++ b/Hosts/VS/TddStudioPackage.Extensions.UnitTests/TddStudioPackage.Extensions.UnitTests.fsproj
@@ -69,6 +69,7 @@
     <Compile Include="TestDoubles.ServiceProvider.fs" />
     <Compile Include="ServicesTest.fs" />
     <Content Include="packages.config" />
+    <Compile Include="Editor\Common.fs" />
     <Compile Include="Editor\TestStartTaggerTests.fs" />
     <Compile Include="Editor\SequencePointTaggerTests.fs" />
     <Compile Include="Editor\CodeCoverageTaggerTests.fs" />
