--- a/incr/package/ToolWindow.csproj
+++ b/incr/package/ToolWindow.csproj
@@ -103,6 +103,7 @@ PURPOSE, MERCHANTABILITY, OR NON-INFRINGEMENT.
   <ItemGroup>
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="ViewModel\Workspace.cs" />
     <Compile Include="WorkspacePane.cs" />
     <Compile Include="Guids.cs" />
     <Compile Include="PackageToolWindow.cs" />
@@ -137,7 +138,11 @@ PURPOSE, MERCHANTABILITY, OR NON-INFRINGEMENT.
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Resources\WorkspacePaneControlResourceDictionary.xaml">
+    <Page Include="Resources\WorkspacePaneControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Style\TreeViewStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
