--- a/incr/package/packages.config
+++ b/incr/package/packages.config
@@ -3,4 +3,5 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="QuickGraph" version="3.6.61119.7" targetFramework="net45" />
 </packages>
