Workspace created - working for bowling kata

--- a/incr/packages/repositories.config
+++ b/incr/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\Common\Domain\packages.config" />
+  <repository path="..\..\Hosts\VS\TddStudioPackage.Extensions\packages.config" />
+  <repository path="..\Core\packages.config" />
   <repository path="..\package\packages.config" />
 </repositories>
