v Extract Sequential graph looper
v Copy files
v Trigger MSBuild
  v Show failure in UX
v Edit proj file to get build outputs
v Edit proj file to replace proj ref with proj output
  v Show pass in in UX

--- a/Common/Domain/Domain.fsproj
+++ b/Common/Domain/Domain.fsproj
@@ -77,6 +77,10 @@
     <Compile Include="Code\DomainExtensions.fs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Clide">
+      <HintPath>..\..\incr\packages\Clide.2.3.29\lib\net40\Clide.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource">
       <HintPath>..\..\packages\Microsoft.Diagnostics.Tracing.EventSource.Redist.1.0.26\lib\net40\Microsoft.Diagnostics.Tracing.EventSource.dll</HintPath>
       <Private>True</Private>
