--- a/incr/package/packages.config
+++ b/incr/package/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventRegister" version="1.0.26" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource" version="1.0.26" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.0.26" targetFramework="net45" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="QuickGraph" version="3.6.61119.7" targetFramework="net45" />
