Works in VS2015

--- a/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
+++ b/Hosts/VS/TddStudioPackage.Extensions/TddStudioPackage.Extensions.fsproj
@@ -78,6 +78,7 @@
     <Compile Include="Editor\GlyphGenerator.fs" />
     <Compile Include="Editor\MarginCanvas.fs" />
     <Compile Include="Editor\Margin.fs" />
+    <Compile Include="HostVersionExtensions.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
