F#2: Only TestHost binaries depend on TestPlatform.ObjectModel

--- a/TestHost.Core/TestHost.Core.fsproj
+++ b/TestHost.Core/TestHost.Core.fsproj
@@ -82,6 +82,8 @@
       <Link>Constants.fs</Link>
     </Compile>
     <Compile Include="Logger.fs" />
+    <Compile Include="PerDocumentLocationTestCases.fs" />
+    <Compile Include="PerTestIdResults.fs" />
     <Compile Include="CoverageDataCollector.fs" />
     <Compile Include="TestPlatformExtensions.fs" />
     <Compile Include="XUnitTestDiscoverer.fs" />
